[package]
name = "progress_tracker"
version = "0.1.0"
authors = ["simoncreek <simoncreek@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1" 

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
